--- a/assignment/src/css/style.css
+++ b/assignment/src/css/style.css
@@ -82,6 +82,10 @@ a.btn-sm {
 	display: flex;
 	flex-wrap: wrap;
 }
+.col-category {
+	width: 33.33%;
+	padding: 0px 15px;
+}
 .col-3 {
 	width: 25%;
 	padding: 0px 15px;
